--- a/COMP_Maven/pom.xml
+++ b/COMP_Maven/pom.xml
@@ -1,52 +1,70 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>COMP_Maven</groupId>
-  <artifactId>COMP_Maven</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-  
-  <repositories>
-	  <repository>
-	    <id>local-repository</id> 
-	    <name>local repository</name> 
-	    <url>file://${project.basedir}/repo</url> 
-	  </repository>
-  </repositories>
-  
-  <dependencies>
-    <dependency>
-      <groupId>custom</groupId>
-      <artifactId>jmetro</artifactId>
-      <version>8.5.11</version>
-    </dependency>
-  	<dependency>
-  		<groupId>com.sun.activation</groupId>
-  		<artifactId>javax.activation</artifactId>
-  		<version>1.2.0</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.commons</groupId>
-  		<artifactId>commons-email</artifactId>
-  		<version>1.5</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.eclipse.ecf</groupId>
-  		<artifactId>org.apache.log4j</artifactId>
-  		<version>1.2.15.v201012070815</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.sun.mail</groupId>
-  		<artifactId>javax.mail</artifactId>
-  		<version>1.6.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.jslsolucoes</groupId>
-  		<artifactId>ojdbc6</artifactId>
-  		<version>11.2.0.1.0</version>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>COMP_Maven</groupId>
+	<artifactId>COMP_Maven</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+
+	<properties>
+		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.7.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>3.0.0</version>
+			</plugin>
+		</plugins>
+	</build>
+
+	<repositories>
+		<repository>
+			<id>local-repository</id>
+			<name>local repository</name>
+			<url>file://${project.basedir}/repo</url>
+		</repository>
+	</repositories>
+
+	<dependencies>
+		<dependency>
+			<groupId>custom</groupId>
+			<artifactId>jmetro</artifactId>
+			<version>8.5.11</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.activation</groupId>
+			<artifactId>javax.activation</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-email</artifactId>
+			<version>1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.ecf</groupId>
+			<artifactId>org.apache.log4j</artifactId>
+			<version>1.2.15.v201012070815</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jslsolucoes</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0.1.0</version>
+		</dependency>
+	</dependencies>
 </project>
